Added an ability to delete a few keys on the keys list screen.| #920

--- a/FlowCrypt/src/main/res/layout/key_item.xml
+++ b/FlowCrypt/src/main/res/layout/key_item.xml
@@ -8,6 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/selector_msg_item"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical">
 
@@ -19,8 +20,8 @@
         android:maxLines="1"
         android:textColor="@color/dark"
         android:textSize="@dimen/default_text_size_big"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintEnd_toStartOf="@+id/textViewCreationDate"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toTopOf="@+id/guidelineTop"
         tools:text="human@flowcrypt.com" />
@@ -29,17 +30,17 @@
         android:id="@+id/textViewKeywords"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:layout_marginTop="@dimen/margin_top_message_subject"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="0dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/colorPrimary"
         android:textSize="@dimen/default_text_size_medium"
         app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintEnd_toStartOf="@+id/textViewCreationDate"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
         app:layout_constraintTop_toBottomOf="@+id/textViewKeyOwner"
         app:layout_constraintVertical_bias="0.0"
