Added an ability to see IMAP/SMTP settings of a current account.| #935

--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -56,6 +56,11 @@
     </Preference>
 
     <Preference
+        android:key="@string/pref_key_server_settings"
+        android:title="@string/server_settings"
+        app:iconSpaceReserved="false" />
+
+    <Preference
         android:title="@string/legal"
         app:iconSpaceReserved="false">
         <intent
