--- a/FlowCrypt/src/main/res/layout/fragment_server_settings.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_server_settings.xml
@@ -77,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
+                    android:enabled="false"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:paddingTop="@dimen/default_margin_medium" />
