--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -34,4 +34,48 @@
             android:name="accountEntity"
             app:argType="com.flowcrypt.email.database.entity.AccountEntity" />
     </fragment>
+    <dialog
+        android:id="@+id/twoWayDialogFragment"
+        android:name="com.flowcrypt.email.ui.activity.fragment.dialog.TwoWayDialogFragment"
+        android:label="TwoWayDialogFragment">
+        <argument
+            android:name="requestCode"
+            android:defaultValue="0"
+            app:argType="integer" />
+        <argument
+            android:name="dialogTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="dialogMsg"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="positiveButtonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="negativeButtonTitle"
+            android:defaultValue="@null"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="isCancelable"
+            android:defaultValue="true"
+            app:argType="boolean" />
+        <argument
+            android:name="hasHtml"
+            android:defaultValue="false"
+            app:argType="boolean" />
+        <argument
+            android:name="useLinkify"
+            android:defaultValue="false"
+            app:argType="boolean" />
+    </dialog>
+    <action
+        android:id="@+id/action_global_twoWayDialogFragment"
+        app:destination="@id/twoWayDialogFragment" />
 </navigation>
