Added showing a notification if auth failed.| #935

--- a/FlowCrypt/src/main/res/navigation/nav_graph.xml
+++ b/FlowCrypt/src/main/res/navigation/nav_graph.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_serverSettingsFragment_to_checkCredentialsFragment"
             app:destination="@id/checkCredentialsFragment" />
+        <deepLink
+            android:id="@+id/deepLinkServerSettings"
+            app:uri="flowcrypt://email.flowcrypt.com/settings/server_settings" />
     </fragment>
     <fragment
         android:id="@+id/checkCredentialsFragment"
