--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -18,7 +18,6 @@
         android:fillViewport="true">
 
         <LinearLayout
-            android:id="@+id/layoutContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -121,22 +120,22 @@
                 android:layout_weight="1">
 
                 <ProgressBar
-                    android:id="@id/viewIdProgressView"
+                    android:id="@id/progress"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center" />
 
                 <include
-                    android:id="@+id/viewIdStatusView"
-                    layout="@layout/sync_status"
+                    android:id="@+id/status"
+                    layout="@layout/status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:visibility="gone" />
 
                 <LinearLayout
-                    android:id="@+id/layoutMessageContainer"
+                    android:id="@+id/layoutContent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
@@ -171,14 +170,6 @@
             </FrameLayout>
         </LinearLayout>
     </com.flowcrypt.email.ui.widget.NonLockingScrollView>
-
-    <ProgressBar
-        android:id="@+id/progressBarActionRunning"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutActionProgress"
