Restored showing attachments in MessageDetailsFragment. Refactored code.| #993

--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -119,9 +119,9 @@
                 android:layout_marginTop="@dimen/default_margin_content_small"
                 android:layout_weight="1">
 
-                <ProgressBar
-                    android:id="@id/progress"
-                    style="?android:attr/progressBarStyle"
+                <include
+                    android:id="@+id/progress"
+                    layout="@layout/progress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center" />
@@ -141,7 +141,15 @@
                     android:orientation="vertical"
                     android:paddingTop="@dimen/default_margin_small"
                     android:paddingBottom="@dimen/default_margin_small"
-                    android:visibility="gone">
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <com.flowcrypt.email.ui.widget.EmailWebView
+                        android:id="@+id/emailWebView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.flowcrypt.email.ui.widget.EmailWebView>
 
                     <LinearLayout
                         android:id="@+id/layoutMessageParts"
@@ -152,11 +160,16 @@
                         android:paddingTop="@dimen/default_margin_small"
                         android:paddingBottom="@dimen/default_margin_small">
 
-                        <com.flowcrypt.email.ui.widget.EmailWebView
-                            android:id="@+id/emailWebView"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
                     </LinearLayout>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rVAttachments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:nestedScrollingEnabled="false"
+                        android:overScrollMode="never"
+                        tools:itemCount="3"
+                        tools:listitem="@layout/attachment_item" />
 
                     <include
                         android:id="@+id/layoutReplyButtons"
