--- a/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
+++ b/FlowCrypt/src/main/res/xml/preferences_main_settings.xml
@@ -55,13 +55,10 @@
             android:targetPackage="@string/application_id" />
     </Preference>
 
-    <!--Temporary disabled-->
     <Preference
         android:key="@string/pref_key_server_settings"
         android:title="@string/server_settings"
-        android:visibility="gone"
-        app:iconSpaceReserved="false"
-        app:isPreferenceVisible="false" />
+        app:iconSpaceReserved="false" />
 
     <Preference
         android:title="@string/legal"
