--- a/FlowCrypt/src/main/res/layout/activity_search_messages.xml
+++ b/FlowCrypt/src/main/res/layout/activity_search_messages.xml
@@ -10,19 +10,7 @@
     android:layout_height="match_parent"
     tools:context="com.flowcrypt.email.ui.activity.EmailManagerActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:background="?android:attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+    <include layout="@layout/toolbar" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/emailListFragment"
