--- a/FlowCrypt/src/main/res/layout/fragment_user_recoverable_auth_exception.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_user_recoverable_auth_exception.xml
@@ -104,14 +104,24 @@
         <Button
             android:id="@+id/buttonLogout"
             style="@style/AppWidget.Button.White.ConnectAccount"
-            android:layout_marginBottom="@dimen/default_margin_content"
+            android:layout_marginBottom="@dimen/default_margin_content_big"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
             android:text="@string/log_out"
             android:theme="@style/AppWidget.Button.White.ConnectAccount"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/buttonHelp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />
+
+        <Button
+            android:id="@+id/buttonHelp"
+            style="@style/AppWidget.Button.Transparent.MainScreenTopButton"
+            android:layout_marginBottom="@dimen/default_margin_content"
+            android:text="@string/help"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
