--- a/FlowCrypt/src/main/res/values/colors.xml
+++ b/FlowCrypt/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="orange">#D18826</color>
     <color name="yellow">#FFEB3B</color>
     <color name="white">#FFFFFF</color>
+    <color name="nobel">#B7B7B7</color>
 </resources>
