--- a/FlowCrypt/src/main/res/values/dimens.xml
+++ b/FlowCrypt/src/main/res/values/dimens.xml
@@ -27,8 +27,10 @@
     <dimen name="default_margin_very_big">20dp</dimen>
     <dimen name="default_margin_huge">40dp</dimen>
 
+    <dimen name="default_text_size_very_big">22sp</dimen>
     <dimen name="default_text_size_big">18sp</dimen>
     <dimen name="default_text_size_medium">16sp</dimen>
+    <dimen name="default_text_size_regular">14sp</dimen>
     <dimen name="default_text_size_small" tools:ignore="UnusedResources">12sp</dimen>
     <dimen name="default_text_size_very_small">10sp</dimen>
 
