--- a/FlowCrypt/src/main/res/layout/fragment_message_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_message_details.xml
@@ -132,27 +132,25 @@
                     android:id="@+id/iBShowDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/default_margin_content_small"
                     android:background="?android:attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/details"
                     android:src="@mipmap/ic_arrow_drop_down_grey"
                     app:layout_constraintBottom_toBottomOf="@+id/tVTo"
-                    app:layout_constraintEnd_toStartOf="@+id/imageButtonReplyAll"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/tVTo"
                     app:layout_constraintTop_toTopOf="@+id/tVTo" />
 
                 <TextView
                     android:id="@+id/tVTo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/default_margin_content_small"
                     android:ellipsize="end"
                     android:maxLines="1"
+                    app:layout_constraintWidth_max="@dimen/max_width_field_to"
                     android:textAlignment="textStart"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewSenderAddress"
-                    tools:text="To: You" />
+                    tools:text="To me" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
