--- a/FlowCrypt/src/main/res/layout/fragment_public_key_details.xml
+++ b/FlowCrypt/src/main/res/layout/fragment_public_key_details.xml
@@ -46,7 +46,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layoutLongIds"
+                android:id="@+id/layoutFingerprints"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_margin_content"
@@ -65,7 +65,7 @@
                 android:textIsSelectable="true"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-                app:layout_constraintTop_toBottomOf="@+id/layoutLongIds"
+                app:layout_constraintTop_toBottomOf="@+id/layoutFingerprints"
                 tools:text="Algorithm: RSA 4096 bit" />
 
 
