--- a/FlowCrypt/src/main/res/layout/pub_key_adapter_item_checkbox.xml
+++ b/FlowCrypt/src/main/res/layout/pub_key_adapter_item_checkbox.xml
@@ -19,14 +19,14 @@
         android:ellipsize="middle"
         android:singleLine="true"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLongId"
+        app:layout_constraintBottom_toTopOf="@+id/textViewFingerprint"
         app:layout_constraintEnd_toStartOf="@+id/compoundButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="flowcrypt@flowcrypt.com" />
 
     <TextView
-        android:id="@+id/textViewLongId"
+        android:id="@+id/textViewFingerprint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/default_margin_small"
