--- a/FlowCrypt/src/main/res/values/ids.xml
+++ b/FlowCrypt/src/main/res/values/ids.xml
@@ -36,4 +36,5 @@
 
     <item name="notification_id_has_failed_outgoing_msgs" type="id" />
     <item name="notification_id_auth_failure" type="id" />
+    <item name="notification_id_passphrase_service" type="id" />
 </resources>
