--- a/FlowCrypt/src/main/res/layout/activity_check_keys.xml
+++ b/FlowCrypt/src/main/res/layout/activity_check_keys.xml
@@ -140,6 +140,7 @@
                 android:id="@+id/rBStoreInRAM"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:text="@string/keep_pass_phrase_in_memory" />
         </RadioGroup>
 
